# OmniGuard

./: .gitignore  README.md  main.py  pyproject.toml  run.ps1
app/: __init__.py  main.py
app/api/routers/: chat.py
app/api/schemas/: llm.py
app/application/orchestrators/: llm_orchestrator.py
app/domain/interfaces/: icase_generator.py  idrift_detector.py  ievent_emitter.py  illm_client.py  imetric_collector.py  iredaction_filter.py  isession_tracker.py
app/infrastructure/config/: settings.py
app/infrastructure/factories/: orchestrator_factory.py
app/infrastructure/llm/vertex/: client.py
app/infrastructure/telemetry/: __init__.py
app/infrastructure/telemetry/export/: datadog_cases.py
app/infrastructure/telemetry/logging/: log_collector.py
app/infrastructure/telemetry/metrics/: metric_collector.py  metric_collector_adapter.py
app/observability/analysis/: __init__.py  anomaly.py  causal_engine.py  drift_detector.py  semantic_shift.py
app/observability/enrichment/: __init__.py  feedback_processor.py  redaction_filter.py  session_tracker.py
app/observability/export/: __init__.py  datadog_cases.py  datadog_events.py  datadog_metrics.py
app/observability/ingestion/: __init__.py  metric_collector.py  span_collector.py
